[Patch]: Tweaked item generation and model implementation